Updated final project

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <h6 class="font-bold italic">*This article contains book spoilers.*</h6>
 
-            <p>The novel that I read is called The Raiders and the Cross by Patrick Larsimont.
+            <p>The novel that I read is called <i>The Raiders and the Cross</i> by Patrick Larsimont.
                  The book is set in World War II and focuses on fighter pilot Jeremy "Jox" McNabb, who participates in many battles in Britain and Malta.
                   The book begins in 1940,  with the war reaching an all time high.
                 London is being bombarded during night raids and Jox Mcnabb is tasked with the job of stopping the German Luftwaffe by training to fly a black Spitfire on night fighting missions to defend Britain.</p>
@@ -40,7 +40,7 @@
             </figure>
 
             <p>But then when he least expects it, a tragedy strikes and Jox loses his girlfriend Alice in a raid on London.
-                Jox is damaged not only from war but from the loss of Alice, and begins a slow recovery to rebuild himself both physically and emotionally.</p>
+                Jox is damaged not only from war, but from the loss of Alice, and begins a slow recovery to rebuild himself both physically and emotionally.</p>
 
             <figure>
                 <img class="rounded-lg" src="./img/London-Blitz-006.jpg" alt="">
