--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 </address>
                 <h1 class="mb-4 text-3xl font-extrabold leading-tight text-gray-900 lg:mb-6 lg:text-4xl dark:text-white"><i>The Raiders and the Cross</i> Summary</h1>
             </header>
-            <p class="lead">The Story of Jeremy "Jox" Mcnabb</p>
+            <p class="lead">The Story of Jeremy "Jox" McNabb</p>
 
             <h6 class="font-bold italic">*This article contains book spoilers.*</h6>
 
             <p>The novel that I read is called <i>The Raiders and the Cross</i> by Patrick Larsimont.
                  The book is set in World War II and focuses on fighter pilot Jeremy "Jox" McNabb, who participates in many battles in Britain and Malta.
                   The book begins in 1940,  with the war reaching an all time high.
-                London is being bombarded during night raids and Jox Mcnabb is tasked with the job of stopping the German Luftwaffe by training to fly a black Spitfire on night fighting missions to defend Britain.</p>
+                London is being bombarded during night raids and Jox McNabb is tasked with the job of stopping the German Luftwaffe by training to fly a black Spitfire on night fighting missions to defend Britain.</p>
 
             <figure>
                 <img class="rounded-lg" src="./img/spitfirevbnightfighterrf_7.jpg" alt="">
